# Mi_primer_proyecto

./: ## proyecto ejemplo.md  Readme.md  index.html  pyproject.toml
Codigo/: Exploracio secuestros.ipynb
