[project]
name = "secuestro"
version = "0.0.1"
description = "exploracion de la base de secuestros en antioquia, cundinamarca y la guajira"
authors = [
    {name = "y"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "pandas (==2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
